--- a/customer.html
+++ b/customer.html
@@ -2,9 +2,175 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Customer Home Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="workRequest.css">
   </head>
   <body>
-    <a href="index.html">My Index Page</a>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+            <a href="index.html" class="navbar-brand">Home Page</a>
+        </div>
+
+
+        <div class="collapse navbar-collapse" id="bs-nav-demo">
+          <ul class="nav navbar-nav navbar-right">
+            <!--Welcome "Customer Log-in name" -->
+            <li class="navbar-brand"> Welcome, CUSTOMER NAME<a href="customer.html"></a></li>
+          </ul>
+        </div> <!--nav bar collapse-->
+      </div>
+    </nav>
+
+
+    <div class="container">
+        <!--two sections-->
+        <!--Section 1-Current Work order -->
+        <h1>Work Order #___ </h1>
+        <!--progress bar -->
+        <div class="container">
+          <h2>Work Status</h2>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:10%">
+              Request Placed
+            </div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:10%">
+              Request Recieved
+            </div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:20%">
+              Parts Ordered
+            </div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:10%">
+              Work Date Set
+            </div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:20%">
+              Work In Progress
+            </div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:15%">
+              Resident Follow Up
+            </div>
+            <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:15%">
+              Completed
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3" style="background-color:red;">
+        <!--Work being completed by ______ -->
+        <!--Contact info of worker -->
+              <h5>Maintenace Contact Info</h6>
+              <h6>Name: </h6>
+              <h6>Phone Number: </h6>
+            </div>
+            <div class="col-sm-5" style="background-color:red;">
+        <!--Maintenance job requested-->
+              <h5>Work Request Details</h5>
+              <h6>Location: </h6>
+              <h6>Details: </h6>
+            </div>
+            <div class="col-sm-4" style="background-color:red;">
+              <h5>Rate Your Experience</h5>
+              <h6>Upon completion of the work order, please rate how we did.</h6>
+              <span class="rating">
+                <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
+                <label for="rating-input-1-5" class="rating-star"></label>
+                <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
+                <label for="rating-input-1-4" class="rating-star"></label>
+                <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
+                <label for="rating-input-1-3" class="rating-star"></label>
+                <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
+                <label for="rating-input-1-2" class="rating-star"></label>                            <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
+                <label for="rating-input-1-1" class="rating-star"></label>
+              </span>
+              <h6>Additional Comments? Send us a message.</h6>
+            </div>
+          </div>
+
+        </div>
+    </div>
+        <!--Photos of completed work-->
+
+
+    <div class="container">
+        <h2>Previous Work Orders</h2>
+        <!--Section 2-Work Order History -->
+        <!--table of previous work orders-->
+        <div class="row">
+          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+            <h5>WR#</h5>
+          </div>
+          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+            <h5>Date Sent</h5>
+          </div>
+          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+            <h5>Date Completed</h5>
+          </div>
+          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+            <h5>Details</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3 prevReq">
+            <h5>1111-11</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>01JAN17</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>31JAN17</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>....</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3 prevReq">
+            <h5>2222-22</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>01JAN17</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>31JAN17</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>....</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3 prevReq">
+            <h5>3333-33</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>01JAN17</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>31JAN17</h5>
+          </div>
+          <div class="col-sm-3 prevReq">
+            <h5>....</h5>
+          </div>
+        </div>
+    </div>
+
+
+
+
+
+
+<script type="text/javascript" src="app.js"></script>
+    <!--Bootstrap Javascript-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
