--- a/customer.html
+++ b/customer.html
@@ -30,73 +30,66 @@
       </div>
     </nav>
 
-
     <div class="container">
-        <!--two sections-->
-        <!--Section 1-Current Work order -->
-        <h1>Work Order #___ </h1>
-        <!--progress bar -->
-        <div class="container">
-          <h2>Work Status</h2>
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:10%">
-              Request Placed
-            </div>
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:10%">
-              Request Recieved
-            </div>
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:20%">
-              Parts Ordered
-            </div>
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:10%">
-              Work Date Set
-            </div>
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:20%">
-              Work In Progress
-            </div>
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width:15%">
-              Resident Follow Up
-            </div>
-            <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:15%">
-              Completed
-            </div>
+      <!--two sections-->
+      <!--Section 1-Current Work order -->
+      <h1>Work Order #___ </h1>
+      <!--progress bar -->
+      <div class="container">
+        <h2>Work Status</h2>
+      </div>
+
+
+      <progress id= "myProgress" max="100" value="0"></progress>
+
+
+
+
+      <div class="container statusBox">
+        <div class="row">
+          <!--Work being completed by ______ -->
+          <!--Contact info of worker -->
+          <div class="col-sm-3">
+            <h5>Maintenace Contact Info</h6>
+            <h6>Name: </h6>
+            <h6>Phone Number: </h6>
           </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-3" style="background-color:red;">
-        <!--Work being completed by ______ -->
-        <!--Contact info of worker -->
-              <h5>Maintenace Contact Info</h6>
-              <h6>Name: </h6>
-              <h6>Phone Number: </h6>
-            </div>
-            <div class="col-sm-5" style="background-color:red;">
-        <!--Maintenance job requested-->
-              <h5>Work Request Details</h5>
-              <h6>Location: </h6>
-              <h6>Details: </h6>
-            </div>
-            <div class="col-sm-4" style="background-color:red;">
-              <h5>Rate Your Experience</h5>
-              <h6>Upon completion of the work order, please rate how we did.</h6>
-              <span class="rating">
-                <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
-                <label for="rating-input-1-5" class="rating-star"></label>
-                <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
-                <label for="rating-input-1-4" class="rating-star"></label>
-                <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
-                <label for="rating-input-1-3" class="rating-star"></label>
-                <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
-                <label for="rating-input-1-2" class="rating-star"></label>                            <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
-                <label for="rating-input-1-1" class="rating-star"></label>
-              </span>
-              <h6>Additional Comments? Send us a message.</h6>
-            </div>
+          <!--Maintenance job requested-->
+          <div class="col-sm-5">
+            <h5>Work Request Details</h5>
+            <h6>Location: </h6>
+            <h6>Details: </h6>
+          </div>
+          <div class="col-sm-4">
+            <h5>Rate Your Experience</h5>
+            <h6>Upon completion of the work order, please rate how we did.</h6>
+            <span class="rating">
+              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
+              <label for="rating-input-1-5" class="rating-star"></label>
+              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
+              <label for="rating-input-1-4" class="rating-star"></label>
+              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
+              <label for="rating-input-1-3" class="rating-star"></label>
+              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
+              <label for="rating-input-1-2" class="rating-star"></label>                            <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
+              <label for="rating-input-1-1" class="rating-star"></label>
+            </span>
+            <h6>Additional Comments? Send us a message.</h6>
           </div>
 
         </div>
+      </div>
+
     </div>
+
+
+
+
+
+
+
+
+
         <!--Photos of completed work-->
 
 
@@ -105,16 +98,16 @@
         <!--Section 2-Work Order History -->
         <!--table of previous work orders-->
         <div class="row">
-          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+          <div class="col-sm-3 prevReqTitle">
             <h5>WR#</h5>
           </div>
-          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+          <div class="col-sm-3 prevReqTitle">
             <h5>Date Sent</h5>
           </div>
-          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+          <div class="col-sm-3 prevReqTitle">
             <h5>Date Completed</h5>
           </div>
-          <div class="col-sm-3 prevReqTitle" style="background-color:red;">
+          <div class="col-sm-3 prevReqTitle">
             <h5>Details</h5>
           </div>
         </div>
@@ -167,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="workRequest.js"></script>
     <!--Bootstrap Javascript-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
