--- a/maintenance.html
+++ b/maintenance.html
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a href="index.html" class="navbar-brand">Home Page</a>
+            <a href="index.php" class="navbar-brand">Home Page</a>
         </div>
 
 
